--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,6 +18,19 @@ h6 {
 	font-weight: bold;
 }
 
+h1 {
+	font-size: 2rem;
+	border-bottom: 2px solid black;
+}
+
+h2 {
+	font-size: 1.5rem;
+}
+
+h3 {
+	font-size: 1rem;
+}
+
 a {
 	font-family: 'Spectral SC', sans-serif;
 	font-weight: bold;
