--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,6 +51,19 @@
 		font-weight: bold;
 	}
 
+	h1 {
+		font-size: 2rem;
+		border-bottom: 2px solid black;
+	}
+
+	h2 {
+		font-size: 1.5rem;
+	}
+
+	h3 {
+		font-size: 1rem;
+	}
+
 	a {
 		font-family: 'Spectral SC', sans-serif;
 		font-weight: bold;
